포스트 목록 페이지에 대표 이미지 출력하기

--- a/blog/templates/blog/post_list.html
+++ b/blog/templates/blog/post_list.html
@@ -90,8 +90,8 @@
                 {% for p in post_list %}
                 <!-- Blog post-->
                 <div class="card mb-4">
-                    <a href="#!"><img class="card-img-top" src="https://dummyimage.com/700x350/dee2e6/6c757d.jpg"
-                            alt="..." /></a>
+                    <a href="#!"><img class="card-img-top" src={{ p.head_image.url }}
+                            alt="{{ p.title}}" /></a>
                     <div class="card-body">
                         <h2 class="card-title">{{ p.title }}</h2>
                         <p class="card-text">{{ p.content }}</p>
