--- a/blog/templates/blog/post_list.html
+++ b/blog/templates/blog/post_list.html
@@ -90,8 +90,11 @@
                 {% for p in post_list %}
                 <!-- Blog post-->
                 <div class="card mb-4">
-                    <a href="#!"><img class="card-img-top" src={{ p.head_image.url }}
-                            alt="{{ p.title}}" /></a>
+                    {% if p.head_image %}
+                        <a href="#!"><img class="card-img-top" src={{ p.head_image.url }} alt="{{ p.title}}" /></a>
+                    {% else %}
+                        <a href="#!"><img class="card-img-top" src= https://picsum.photos/seed/{{p.id}}/600/200 alt="{{ p.title}}" /></a>
+                    {% endif %}
                     <div class="card-body">
                         <h2 class="card-title">{{ p.title }}</h2>
                         <p class="card-text">{{ p.content }}</p>
