--- a/blog/templates/blog/post_detail.html
+++ b/blog/templates/blog/post_detail.html
@@ -12,6 +12,7 @@
     <!-- Core theme CSS (includes Bootstrap)-->
     <link href="{%static 'blog/css/blog-post.css' %}" rel="stylesheet" />
     <link href="{% static 'blog/bootstrap/bootstrap.min.css' %}" rel="stylesheet" type="text/css">
+    <script src="https://kit.fontawesome.com/9470a50b12.js" crossorigin="anonymous"></script>
 </head>
 <body>
 <!-- Responsive navbar-->
@@ -58,6 +59,20 @@
                     {% endif %}
                  <!-- Post content-->
                 <p>{{ post.content }}</p>
+                {% if post.file_upload %}
+                    <a href = "{{ post.file_upload.url }}" type="button" class="btn btn-outline-dark" role="button" download>
+                        Download:
+                        {% if post.get_file_ext == 'xlsx' or post.get_file_ext == 'xls' %}
+                            <i class = 'far fa-file-excel'></i>
+                        {% elif post.get_file_ext == 'csv' %}
+                            <i class="fas fa-file-csv"></i>
+                        {% elif post.get_file_ext == 'docx' %}
+                            <i class="far fa-file-word"></i>
+                        {% else %}
+                            <i class="far fa-file-alt"></i>
+                        {% endif %}
+                        {{ post.get_file_name }}</a>
+                {% endif %}
                 <hr>
             </article>
             <!-- Comments section-->
