포스트 목록,상세페이지에서 작성자 정보 출력

--- a/blog/templates/blog/post_detail.html
+++ b/blog/templates/blog/post_detail.html
@@ -17,7 +17,7 @@
             {% endif %}
             <p class = "lead">
                 by
-                <a href="#">작성자명 쓸 위치</a>
+                <a href="#">{{ post.author | upper }}</a>
             </p>
             <!-- Post meta content-->
             <div class="text-muted fst-italic mb-2">Posted on {{ post.created_at }} </div>
