--- a/blog/templates/blog/base.html
+++ b/blog/templates/blog/base.html
@@ -10,7 +10,7 @@
 </head>
 
 <body>
-    {% include 'blog/navbar.html' %}
+{% include 'blog/navbar.html' %}
 <div class="container">
     <div class="row my-4">
         <div class="col-md-8 col-lg-9">
@@ -32,29 +32,24 @@
 
 
             <!-- Categories widget-->
-            <div class="card mb-4">
+            <div class="card my-4" id = "categories-card">
                 <div class="card-header">Categories</div>
                 <div class="card-body">
                     <div class="row">
-                        <div class="col-sm-6">
-                            <ul class="list-unstyled mb-0">
-                                <li><a href="#!">Web Design</a></li>
-                                <li><a href="#!">HTML</a></li>
-                                <li><a href="#!">Freebies</a></li>
-                            </ul>
-                        </div>
-                        <div class="col-sm-6">
-                            <ul class="list-unstyled mb-0">
-                                <li><a href="#!">JavaScript</a></li>
-                                <li><a href="#!">CSS</a></li>
-                                <li><a href="#!">Tutorials</a></li>
-                            </ul>
-                        </div>
+                        <ul>
+                            {% for category in categories %}
+                            <li>
+                                <a href="#">{{ category.name }} ({{ category.post_set.count }})</a>
+                            </li>
+                            {% endfor %}
+                            <li>
+                                <a href="#">미분류 ({{ category.post_set.count }})</a>
+                            </li>
+                        </ul>
                     </div>
                 </div>
             </div>
         </div>
-
     </div>
 
     {% include 'blog/footer.html' %}
