포스트 상세 페이지에 카테고리 기능 추가하기

--- a/blog/templates/blog/post_detail.html
+++ b/blog/templates/blog/post_detail.html
@@ -6,7 +6,11 @@
 
 {% block main_area %}
 <div id = "post-area">
-
+     {% if post.category %}
+        <span class="badge badge-secondary float-right">{{ post.category }}</span>
+        {% else %}
+        <span class="badge badge-secondary float-right">미분류</span>
+        {% endif %}
     <article>
         <!-- Post header-->
         <header class="mb-4">
@@ -21,9 +25,9 @@
             </p>
             <!-- Post meta content-->
             <div class="text-muted fst-italic mb-2">Posted on {{ post.created_at }} </div>
-            <!-- Post categories-->
-            <a class="badge bg-secondary text-decoration-none link-light" href="#!">Web Design</a>
-            <a class="badge bg-secondary text-decoration-none link-light" href="#!">Freebies</a>
+<!--            &lt;!&ndash; Post categories&ndash;&gt;-->
+<!--            <a class="badge bg-secondary text-decoration-none link-light" href="#!">Web Design</a>-->
+<!--            <a class="badge bg-secondary text-decoration-none link-light" href="#!">Freebies</a>-->
         </header>
         <!-- Preview image figure-->
         {% if p.head_image %}
