--- a/blog/templates/blog/post_list.html
+++ b/blog/templates/blog/post_list.html
@@ -1,7 +1,12 @@
 {% extends 'blog/base.html' %}
 
 {% block main_area %}
-<h1>Blog</h1>
+<h1>
+    Blog
+    {% if category %}
+        <span class="badge badge-secondary float-right">{{ category }}</span>
+    {% endif %}
+</h1>
 
 {% for p in post_list %}
 <!-- Blog post-->
