태그 페이지 만들기

--- a/blog/templates/blog/post_list.html
+++ b/blog/templates/blog/post_list.html
@@ -4,7 +4,12 @@
 <h1>
     Blog
     {% if category %}
-        <span class="badge badge-secondary float-right">{{ category }}</span>
+        <span class="badge badge-secondary">{{ category }}</span>
+    {% endif %}
+    {% if tag %}
+        <span class="badge badge-secondary">
+            <i class="fas fa-tag"></i> {{ tag }}
+        </span>
     {% endif %}
 </h1>
 
