포스트 수정페이지 만들기

--- a/blog/templates/blog/post_detail.html
+++ b/blog/templates/blog/post_detail.html
@@ -1,16 +1,16 @@
 {% extends 'blog/base.html' %}
 
 {% block head_title %}
-    {{ post.title }} | Blog
+{{ post.title }} | Blog
 {% endblock %}
 
 {% block main_area %}
 <div id = "post-area">
-     {% if post.category %}
-        <span class="badge badge-secondary float-right">{{ post.category }}</span>
-        {% else %}
-        <span class="badge badge-secondary float-right">미분류</span>
-        {% endif %}
+    {% if post.category %}
+    <span class="badge badge-secondary float-right">{{ post.category }}</span>
+    {% else %}
+    <span class="badge badge-secondary float-right">미분류</span>
+    {% endif %}
     <article>
         <!-- Post header-->
         <header class="mb-4">
@@ -23,11 +23,17 @@
                 by
                 <a href="#">{{ post.author | upper }}</a>
             </p>
+
+            <hr>
+
+            {% if user.is_authenticated and user == post.author %}
+            <a type="button" href="/blog/update_post/{{ post.pk }}" class="btn-sm btn-info float-right"><i class="fas fa-pencil-alt"></i>&nbsp; &nbsp; Edit Post</a>
+            {% endif %}
             <!-- Post meta content-->
             <div class="text-muted fst-italic mb-2">Posted on {{ post.created_at }} </div>
-<!--            &lt;!&ndash; Post categories&ndash;&gt;-->
-<!--            <a class="badge bg-secondary text-decoration-none link-light" href="#!">Web Design</a>-->
-<!--            <a class="badge bg-secondary text-decoration-none link-light" href="#!">Freebies</a>-->
+            <!--            &lt;!&ndash; Post categories&ndash;&gt;-->
+            <!--            <a class="badge bg-secondary text-decoration-none link-light" href="#!">Web Design</a>-->
+            <!--            <a class="badge bg-secondary text-decoration-none link-light" href="#!">Freebies</a>-->
         </header>
         <!-- Preview image figure-->
         {% if p.head_image %}
