--- a/blog/templates/blog/navbar.html
+++ b/blog/templates/blog/navbar.html
@@ -1,3 +1,5 @@
+{% load socialaccount %}
+
 <nav class="navbar navbar-expand-lg navbar-light bg-light">
     <div class="container">
         <a class="navbar-brand" href="/">Do it Django</a>
@@ -16,22 +18,25 @@
                 <li class="nav-item">
                     <a class="nav-link" href="/about_me/">About me</a>
                 </li>
+
+            </ul>
+
+            <ul class="navbar-nav ml-auto">
+                {% if user.is_authenticated %}
                 <li class="nav-item dropdown">
                     <a class="nav-link dropdown-toggle" href="#" id="navbarDropdownMenuLink" role="button"
                        data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-                        Dropdown link
+                        {{ user.username }}
                     </a>
                     <div class="dropdown-menu" aria-labelledby="navbarDropdownMenuLink">
-                        <a class="dropdown-item" href="#">Action</a>
-                        <a class="dropdown-item" href="#">Another action</a>
-                        <a class="dropdown-item" href="#">Something else here</a>
+                        <a class="dropdown-item" href="/accounts/logout">Log Out</a>
                     </div>
                 </li>
-            </ul>
-            <ul class="navbar-nav ml-auto">
+                {% else %}
                 <li class="nav-item">
                     <a class="nav-link" href="#" data-toggle="modal" data-target="#loginModal">Log In</a>
                 </li>
+                {% endif %}
             </ul>
         </div>
     </div>
@@ -50,8 +55,8 @@
             <div class="modal-body">
                 <div class="row">
                     <div class="col-md-6 col-sm-12">
-                        <button type="button" class="btn btn-outline-dark btn-block btn-small"><i class="fab fa-google"></i>Log in with
-                            Google</button>
+                        <a role="button" href="{% provider_login_url 'google' %}" type="button" class="btn btn-outline-dark btn-block btn-small"><i class="fab fa-google"></i>Log in with
+                            Google</a>
                         <button type="button" class="btn btn-outline-dark btn-block btn-small"><i class="far fa-user"></i>Log in with
                             UserName</button>
                     </div>
