로그인기능 추가하기

--- a/blog/templates/blog/navbar.html
+++ b/blog/templates/blog/navbar.html
@@ -57,12 +57,12 @@
                     <div class="col-md-6 col-sm-12">
                         <a role="button" href="{% provider_login_url 'google' %}" type="button" class="btn btn-outline-dark btn-block btn-small"><i class="fab fa-google"></i>Log in with
                             Google</a>
-                        <button type="button" class="btn btn-outline-dark btn-block btn-small"><i class="far fa-user"></i>Log in with
-                            UserName</button>
+                        <a role ="button" href="/accounts/login/" type="button" class="btn btn-outline-dark btn-block btn-small"><i class="far fa-user"></i>Log in with
+                            UserName</abutton></a>
                     </div>
                     <div class="col-md-6 col-sm-12">
-                        <button type="button" class="btn btn-outline-dark btn-block btn-small"><i class="far fa-envelope"></i>Sign up with
-                            E-mail</button>
+                        <a role="button" href="/accounts/signup" type="button" class="btn btn-outline-dark btn-block btn-small"><i class="far fa-envelope"></i>Sign up with
+                            E-mail</abutton></a>
                     </div>
                 </div>
             </div>
