--- a/blog/templates/blog/post_list.html
+++ b/blog/templates/blog/post_list.html
@@ -56,18 +56,46 @@
 </div>
 {% endfor %}
 
-<!-- Pagination-->
-<nav aria-label="Pagination">
-    <hr class="my-0" />
-    <ul class="pagination justify-content-center my-4">
-        <li class="page-item disabled"><a class="page-link" href="#" tabindex="-1"
-                                          aria-disabled="true">Newer</a></li>
-        <li class="page-item active" aria-current="page"><a class="page-link" href="#!">1</a></li>
-        <li class="page-item"><a class="page-link" href="#!">2</a></li>
-        <li class="page-item"><a class="page-link" href="#!">3</a></li>
-        <li class="page-item disabled"><a class="page-link" href="#!">...</a></li>
-        <li class="page-item"><a class="page-link" href="#!">15</a></li>
-        <li class="page-item"><a class="page-link" href="#!">Older</a></li>
-    </ul>
-</nav>
+    {% if is_paginated %}
+            <!-- Pagination-->
+        <nav aria-label="Pagination">
+            <hr class="my-0" />
+            <ul class="pagination justify-content-center my-4">
+                {% if page_obj.has_next %}
+                 <li class="page-item">
+                     <a class="page-link" href="?page={{ page_obj.next_page_number }}">Older</a>
+                 </li>
+                {% else %}
+                <li class="page-item disabled">
+                     <a class="page-link" href="#">Older</a>
+                </li>
+                {% endif %}
+
+
+                {% if page_obj.has_previous %}
+                <li class="page-item">
+                    <a class="page-link" href="?page={{ page_obj.previous_page_number }}">Newer</a>
+                </li>
+                {% else %}
+                <li class="page-item disabled">
+                    <a class="page-link" href="#">Newer</a>
+                </li>
+                {% endif %}
+            </ul>
+        </nav>
+    {% endif %}
 {% endblock %}
+<!-- &lt;!&ndash; Pagination&ndash;&gt;-->
+<!--        <nav aria-label="Pagination">-->
+<!--            <hr class="my-0" />-->
+<!--            <ul class="pagination justify-content-center my-4">-->
+<!--                <li class="page-item disabled"><a class="page-link" href="#" tabindex="-1"-->
+<!--                                                  aria-disabled="true">Newer</a></li>-->
+<!--                <li class="page-item active" aria-current="page"><a class="page-link" href="#!">1</a></li>-->
+<!--                <li class="page-item"><a class="page-link" href="#!">2</a></li>-->
+<!--                <li class="page-item"><a class="page-link" href="#!">3</a></li>-->
+<!--                <li class="page-item disabled"><a class="page-link" href="#!">...</a></li>-->
+<!--                <li class="page-item"><a class="page-link" href="#!">15</a></li>-->
+<!--                <li class="page-item"><a class="page-link" href="#!">Older</a></li>-->
+<!--            </ul>-->
+<!--        </nav>-->
