--- a/blog/templates/blog/base.html
+++ b/blog/templates/blog/base.html
@@ -23,9 +23,10 @@
                 <div class="card-header">Search</div>
                 <div class="card-body">
                     <div class="input-group">
-                        <input class="form-control" type="text" placeholder="Enter search term..."
-                               aria-label="Enter search term..." aria-describedby="button-search" />
-                        <button class="btn btn-primary" id="button-search" type="button">Go!</button>
+                        <input class="form-control" type="text" placeholder="Search for.." id="search-input">
+                        <span class="input-group-append">
+                            <button class="btn btn-secondary" type="button" onclick="searchPost();">Go!</button>
+                        </span>
                     </div>
                 </div>
             </div>
@@ -51,6 +52,26 @@
             </div>
         </div>
     </div>
+</div>
+
+<script>
+        function searchPost(){
+            let searchValue = document.getElementById('search-input').value.trim();
+            if (searchValue.length > 1){
+                location.href="/blog/search/"+ searchValue + "/";
+            }
+            else {
+                alert('검색어(' + searchValue + ')가 너무 짧습니다.');
+            }
+        };
+
+        document.getElementById('search-input').addEventListener('keyup', function(event){
+            if(event.key == 'Enter'){
+                searchPost();
+             }
+        })
+</script>
+
 
     {% include 'blog/footer.html' %}
 
