--- a/single_pages/templates/single_pages/landing.html
+++ b/single_pages/templates/single_pages/landing.html
@@ -1,17 +1,59 @@
 <!DOCTYPE html>
+{% load static %}
 <html lang="ko">
+
 <head>
     <meta charset="UTF-8">
-    <title>정유석입니다.</title>
+    <title>Do It Django Inflearn 2021</title>
+    <link href="{% static 'blog/bootstrap/bootstrap.min.css' %}" rel="stylesheet" type="text/css">
+    <script src="https://kit.fontawesome.com/9470a50b12.js" crossorigin="anonymous"></script>
+    <link href="{% static 'single_pages/css/landing.css' %}" rel="stylesheet" type="text/css">
 </head>
 <body>
-    <nav>
+{% include 'blog/navbar.html' %}
+
         <a href="/blog/">Blog</a>
         <a href="/about_me/">About me</a>
-    </nav>
 
-    <h1>안녕하세요. 정유석입니다.</h1>
-    <h2>대문 페이지</h2>
-    <h3>아직 만드는 중입니다.</h3>
+    <section>
+        <div class="container">
+            <div class="row justify-content-between mt-4">
+                <div class="col-lg-6 text-light">
+                      <h1>Do It! Django Inflearn</h1>
+                      <p>파이썬 진영의 가장 대표적인 웹프레임워크 Django로 여러분들만의 사이트를 만들었습니다.</p>
+                </div>
+                <div class="col-lg-5">
+                    <h2 class="text-light">Blog - Recent posts</h2>
+
+                    {% for post in recent_posts %}
+                    <div class="card mt-3">
+                        <div class="card-body">
+                            <h6><a href="{{ post.get_absolute_url }}" class="text-decoration-none text-dark">
+                                {{ post.title }}</a></h6>
+
+                            <span class="badge badge-pill badge-light float-right">
+                                <img class="mr-1 rounded-circle" width="20px" src="{{ post.get_avatar_url }}" alt="{{ post.number }}">
+                            {{ post.author.username }}
+                            &nbsp; &nbsp;
+                            {{ post.created_at }}
+                            </span>
+                        </div>
+                    </div>
+                    {% endfor %}
+                </div>
+            </div>
+        </div>
+    </section>
+
+
+<div class="fixed-bottom">
+    {% include 'blog/footer.html' %}
+</div>
+    <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"
+            integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj"
+            crossorigin="anonymous"></script>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.6.0/dist/js/bootstrap.bundle.min.js"
+            integrity="sha384-Piv4xVNRyMGpqkS2by6br4gNJ7DXjqk09RmUpJ8jgGtD7zP9yug3goQfGII0yAns"
+            crossorigin="anonymous"></script>
 </body>
 </html>
