--- a/single_pages/templates/single_pages/about_me.html
+++ b/single_pages/templates/single_pages/about_me.html
@@ -1,20 +1,190 @@
 <!DOCTYPE html>
+{% load static %}
 <html lang="ko">
+
 <head>
     <meta charset="UTF-8">
-    <title>개발자 정유석입니다.</title>
+    <title>About 정유석</title>
+    <link href="{% static 'blog/bootstrap/bootstrap.min.css' %}" rel="stylesheet" type="text/css">
+    <script src="https://kit.fontawesome.com/9470a50b12.js" crossorigin="anonymous"></script>
+    <link href="{% static 'single_pages/css/about_me.css' %}" rel="stylesheet" type="text/css">
 </head>
 <body>
-      <nav>
-        <a href="/blog/">Blog</a>
-        <a href="/about_me/">About me</a>
-    </nav>
+{% include 'blog/navbar.html' %}
+    <section>
+        <div class="container mt-4">
+            <div class="row">
+                <div class="col-lg-8">
+                    <h1>안녕하세요. 정유석입니다.</h1>
+                    <br>
+                    <p>
+                        음악과 컴퓨터와 수영을 좋아합니다.
+                        <br>
+                        데이터 분석으로 돈을 벌고, 퇴근 후에는 운동을 하거나 책을 쓰면서 지냅니다.
+                    </p>
+                    <ul>
+                        <li>WORK EXPERIENCE</li>
+                        <ul>
+                            <li>크고좋은회사 - 빅데이터분석 (2019.10 ~)</li>
+                            <li>모모공공기관 (2016.02 ~ 2019.09)</li>
+                        </ul>
+                        <li>EDUCATION</li>
+                        <ul>
+                            <li>공학박사, 장고공학(Django Engineering), 파이썬대학교 (2010.03~2015.09)</li>
+                            <li>공학석사, 장고공학(Django Engineering), 파이썬대학교 (2007.09~2009.08)</li>
+                            <li>공학학사, 장고공학(Django Engineering), 파이썬대학교 (2003.03~2007.08)</li>
+                        </ul>
+                        <li>PUBLISH</li>
+                        <ul>
+                            <li>DO IT DJANGO, 이지스퍼블리싱 (2020)</li>
+                        </ul>
 
+                    </ul>
 
-    <h1>안녕하세요. 정유석입니다.</h1>
-    <h2>이력</h2>
-    <h2>Portfolio</h2>
-    <h3>아직 공사중입니다.</h3>
+                </div>
+                <div class="col-lg-4">
+                    <img class="img-fluid" src="{% static 'single_pages/images/yuseok.jpg' %}">
+                </div>
+            </div>
+        </div>
+    </section>
 
+<section class="bg-light margin-for-footer">
+    <div class="container">
+        <div class="row">
+            <div class="col-12">
+                <h1>PORTFOLIO</h1>
+            </div>
+        </div>
+        <div class="row">
+            <div class="col-lg-4">
+                <div class="card" data-toggle="modal" data-target="#pycon2017">
+                    <img class="card-img=top" src="{% static 'single_pages/images/SDC12610.jpg' %}">
+                    <div class="card-body">
+                        <h5 class="card-title">파이썬으로 업무자동화 하기 [PYCON 2017]</h5>
+                        <p>Python, Django, Pandas, python-docx로 통계업무 자동화한 내용을 파이콘에서 발표했습니다.</p>
+                    </div>
+                </div>
+            </div>
+
+            <div class="col-lg-4">
+                <div class="card" data-toggle="modal" data-target="#inflearn_django2">
+                    <img class="card-img=top" src="{% static 'single_pages/images/SDC12608.jpg' %}">
+                    <div class="card-body">
+                        <h5 class="card-title">파이썬 사용자를 위한 웹개발 입문 A to Z Django + Bootstrap</h5>
+                        <p>파이썬 웹개발에 대한 인프런 동영상 강의입니다.</p>
+                    </div>
+                </div>
+            </div>
+
+            <div class="col-lg-4">
+                <div class="card" data-toggle="modal" data-target="#automata">
+                    <img class="card-img=top" src="{% static 'single_pages/images/SDC12609.jpg' %}">
+                    <div class="card-body">
+                        <h5 class="card-title">직장인을 위한 프로그래밍 입문과 업무자동화 활용</h5>
+                        <p>파이썬 업무자동화에 대한 인프런 동영상 강의입니다.</p>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
+</section>
+
+<!-- Modal -->
+<div class="modal fade" id="pycon2017" tabindex="-1" aria-labelledby="pycon2017ModalLabel" aria-hidden="true">
+  <div class="modal-dialog modal-lg">
+    <div class="modal-content">
+      <div class="modal-header">
+        <h5 class="modal-title" id="pycon2017ModalLabel">파이썬으로 업무자동화 하기 [PYCON 2017]</h5>
+        <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+          <span aria-hidden="true">&times;</span>
+        </button>
+      </div>
+      <div class="modal-body">
+          <div class="row">
+              <div class="col-lg-7">
+                  <img class="img-fluid" src="{% static 'single_pages/images/SDC12610.jpg' %}">
+              </div>
+              <div class="col-lg-5">
+                  <p>Python, Django, Pandas, python-docx로 통계업무 자동화한 내용을 파이콘에서 발표했습니다.</p>
+              </div>
+          </div>
+
+      </div>
+      <div class="modal-footer">
+        <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
+
+      </div>
+    </div>
+  </div>
+</div>
+
+<!-- Modal -->
+<div class="modal fade" id="inflearn_django2" tabindex="-1" aria-labelledby="inflearndjango2Label" aria-hidden="true">
+  <div class="modal-dialog modal-lg">
+    <div class="modal-content">
+      <div class="modal-header">
+        <h5 class="modal-title" id="inflearndjango2Label">파이썬 사용자를 위한 웹개발 입문 A to Z Django + Bootstrap</h5>
+        <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+          <span aria-hidden="true">&times;</span>
+        </button>
+      </div>
+      <div class="modal-body">
+          <div class="row">
+              <div class="col-lg-7">
+                  <img class="img-fluid" src="{% static 'single_pages/images/SDC12608.jpg' %}">
+              </div>
+              <div class="col-lg-5">
+                  <p>파이썬 웹개발에 대한 인프런 동영상 강의입니다.</p>
+              </div>
+          </div>
+
+      </div>
+      <div class="modal-footer">
+        <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
+
+      </div>
+    </div>
+  </div>
+</div>
+
+<!-- Modal -->
+<div class="modal fade" id="automata" tabindex="-1" aria-labelledby="automataLabel" aria-hidden="true">
+  <div class="modal-dialog modal-lg">
+    <div class="modal-content">
+      <div class="modal-header">
+        <h5 class="modal-title" id="automataLabel">직장인을 위한 프로그래밍 입문과 업무자동화 활용</h5>
+        <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+          <span aria-hidden="true">&times;</span>
+        </button>
+      </div>
+      <div class="modal-body">
+          <div class="row">
+              <div class="col-lg-7">
+                  <img class="img-fluid" src="{% static 'single_pages/images/SDC12609.jpg' %}">
+              </div>
+              <div class="col-lg-5">
+                  <p>파이썬 업무자동화에 대한 인프런 동영상 강의입니다.</p>
+              </div>
+          </div>
+
+      </div>
+      <div class="modal-footer">
+        <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
+
+      </div>
+    </div>
+  </div>
+</div>
+
+<div class="fixed-bottom">
+    {% include 'blog/footer.html' %}
+</div>
+    <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"
+            integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj"
+            crossorigin="anonymous"></script>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.6.0/dist/js/bootstrap.bundle.min.js"
+            integrity="sha384-Piv4xVNRyMGpqkS2by6br4gNJ7DXjqk09RmUpJ8jgGtD7zP9yug3goQfGII0yAns"
+            crossorigin="anonymous"></script>
 </body>
 </html>
